icons for about me

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 Ultimately, having both a background in Mathematics and Computer Science, I hope to supplement my future studies and work in the Computer Science field using my skills in Mathematics as a foundation.
                 </p>
                 <div>
+                    <!--
                     <a href="https://www.linkedin.com/in/jayshinde0714/" class="weblinkLI" >
                         <img src="/images/LI-Logo.png" alt="Jay Shinde, LinkedIn" height="30">
                     </a>
@@ -43,6 +44,9 @@
                     <a href="https://github.com/jshinde842" class="weblinkG">
                         <img src="/images/GitHub_Logo.png" alt="Jay Shinde, Github" height="30">
                     </a>
+                    -->
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                    <ion-icon name="logo-github"></ion-icon>
                 </div>
             </div>
         </section>
@@ -158,11 +162,12 @@
         <br>
     </main>
     <hr>
-    <script type="text/javascript" src="main.js"></script>
     <footer>
         <p style="text-align: center;">Created by Jay Shinde 2022</p>
     </footer>
-
+    <script type="text/javascript" src="main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
