--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
                         <img src="/images/GitHub_Logo.png" alt="Jay Shinde, Github" height="30">
                     </a>
                     -->
-                    <ion-icon name="logo-linkedin"></ion-icon>
-                    <ion-icon name="logo-github"></ion-icon>
+                    <a href="https://www.linkedin.com/in/jayshinde0714/">
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </a>
+
+
+                    <a href="https://github.com/jshinde842">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a>
+                    
                 </div>
             </div>
         </section>
