icons for about me

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                         <img src="/images/GitHub_Logo.png" alt="Jay Shinde, Github" height="30">
                     </a>
                     -->
-                    <a href="https://www.linkedin.com/in/jayshinde0714/">
+                    <a class="social-icon" href="https://www.linkedin.com/in/jayshinde0714/" target="_blank">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
 
 
-                    <a href="https://github.com/jshinde842">
+                    <a class="social-icon" href="https://github.com/jshinde842" target="_blank">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                     
