icons for about me

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 I also place heavy importance on the mathematical value of Python using Scipy or Pandas and many other computing packages which are crucial to computing Linear Algebraic problems and much more. I hope to explore to the full extent of what can be achieved using Python, whether it be extensive numerical analysis using algorithms or the implementation of neural nets.
                 Ultimately, having both a background in Mathematics and Computer Science, I hope to supplement my future studies and work in the Computer Science field using my skills in Mathematics as a foundation.
                 </p>
-                <div>
+                <div class="aboutme-socials-flex">
                     <!--
                     <a href="https://www.linkedin.com/in/jayshinde0714/" class="weblinkLI" >
                         <img src="/images/LI-Logo.png" alt="Jay Shinde, LinkedIn" height="30">
