--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             <img src="/images/portrait.jpg" alt="Jay Shinde, Portrait" class="aboutme-portrait">
             <div class="aboutme-text-flex">
                 <h2>About Me</h2>
-                <p>I am an aspiring Software Engineer with interests in Mathematics, Software Engineering, Algorithms, Data Science, and Machine Learning. I am a current fourth year at University of California San Diego majoring in Mathematics - Computer Science.
-                One of the most interesting concepts I have encountered during my undergraduate study is Discrete Mathematics & Graph Theory. Having came from a strong mathematical background, it was eye-opening to see mathematical concepts applied in various algorithms, such as DFS, and theories that have great importance and applications to Computer Science. 
-                I also place heavy importance on the mathematical value of Python using Scipy or Pandas and many other computing packages which are crucial to computing Linear Algebraic problems and much more. I hope to explore to the full extent of what can be achieved using Python, whether it be extensive numerical analysis using algorithms or the implementation of neural nets.
-                Ultimately, having both a background in Mathematics and Computer Science, I hope to supplement my future studies and work in the Computer Science field using my skills in Mathematics as a foundation.
+                <p>I am an aspiring Software Engineer with interests in Application Development, Mathematics, FinTech, and Data Science. I eagerly seek growth through the cultivation of my skills and learning new technologies.
+
+                    My passion is bridging the gap between the computer sciences and mathematics, from both a philosophical and technical standpoint, in a way that would encourage the engineering of clever solutions to significant problems that have an impact on the real world. 
+                    
+                    Ultimately, having both a background in Mathematics as well as Computer Science, I hope to supplement my future endeavors as a Software Engineer using my skills in Mathematics as a foundation along with a pursuit for higher education.
                 </p>
                 <div class="aboutme-socials-flex">
                     <!--
