--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                         <img src="/images/GitHub_Logo.png" alt="Jay Shinde, Github" height="30">
                     </a>
                     -->
-                    <a class="social-icon" href="https://www.linkedin.com/in/jayshinde0714/" target="_blank">
+                    <a class="social-icon linkedin" href="https://www.linkedin.com/in/jayshinde0714/" target="_blank">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
 
 
-                    <a class="social-icon" href="https://github.com/jshinde842" target="_blank">
+                    <a class="social-icon github" href="https://github.com/jshinde842" target="_blank">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                     
