--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body> 
     <header>
         <nav>
-            <h1><a href="/index.html">Jay Shinde</a></h1>
+            <h1 class="master-logo"><a href="/index.html">Jay Shinde</a></h1>
             <ul class="navigation">
                 <li><a href="/index.html#about" class="nav-link">About Me</a></li>
                 <li><a href="/index.html#edu" class="nav-link">Education</a></li>
