--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 <li><a href="/index.html#exp" class="nav-link">Experience</a></li>
                 <li><a href="/index.html#skills" class="nav-link">Skills</a></li>
                 <li><a href="/index.html#proj" class="nav-link">Projects</a></li>
+                <li><a href="/contact.html" class="nav-link">Contact</a></li>
+            </ul>
+            <ul class="navigation2">
+                <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
