ucsd logo addition

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                         , Components and Design Techniques for Digital Systems, Software Engineering, Discrete Mathematics and Graph Theory, Numerical Analysis: Linear Algebra & Approximation & Nonlinear Equations, and Statistical Methods.
                     </p>
                 </div>
+                <a class="ucsd-logo" href="https://ucsd.edu" target="_blank">
+                    <img src="images/UCSD_Seal.png" alt="UCSD Logo" style="width:42px;height:42px;">
+                </a>
             </div>
         </section>
 
