ucsd logo addition

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section class="edu-flex tag" id="edu">
             <h2>Education</h2>
             <div class="edu-ucsd-flex">
-                <h3><b>University of California, San Diego</b><br><i style="font-size: .8em;">September 2018 - July 2022</i></h3>
+                <h3><b>University of California,<br>San Diego</b><br><i style="font-size: .8em;"><br>September 2018 - July 2022</i></h3>
                 <div>
                     <p><i>Mathematics-Computer Science B.S.</i></p>
                     <p>As a student at UCSD engaged in challenging curriculum in both Mathematics and Computer Science, I have had the opportunity
