ucsd logo addition

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section class="aboutme-flex" id="about">
             <img src="/images/portrait.jpg" alt="Jay Shinde, Portrait" class="aboutme-portrait">
-            <div class="aboutme-text-flex">
+            <div class="aboutme-text-flex f">
                 <h2>About Me</h2>
                 <p>I am an aspiring Software Engineer with interests in Application Development, Mathematics, FinTech, and Data Science. I eagerly seek growth through the cultivation of my skills and learning new technologies.
                     <br><br>
@@ -62,7 +62,7 @@
             </div>
         </section>
 
-        <section class="edu-flex tag" id="edu">
+        <section class="edu-flex tag f" id="edu">
             <h2>Education</h2>
             <div class="edu-ucsd-flex">
                 <h3 style="min-width: 250px "><b>University of California,<br>San Diego</b><br><i style="font-size: .8em;"><br>September 2018 - July 2022</i></h3>
@@ -80,7 +80,7 @@
             </div>
         </section>
 
-        <section class="exp-flex tag" id="exp">
+        <section class="exp-flex tag f" id="exp">
             <h2>Experience</h2>
             <div class="exp-verity-flex">
                 <h3><b>VerityStream</b><br><i style="font-size: .8em;">June 2021 - November 2021</i></h3>
@@ -141,7 +141,7 @@
             </div>
         </section>
 
-        <section class="flex-proj tag" id = "proj">
+        <section class="flex-proj tag f" id = "proj">
             <h2>Projects</h2>
             <div class="f1">
                 <h3>Formula 1 Standings Predictions</h3>
