ucsd logo addition

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </header>
 
     <main>
-        <section class="aboutme-flex" id="about">
+        <section class="aboutme-flex f" id="about">
             <img src="/images/portrait.jpg" alt="Jay Shinde, Portrait" class="aboutme-portrait">
-            <div class="aboutme-text-flex f">
+            <div class="aboutme-text-flex f2">
                 <h2>About Me</h2>
                 <p>I am an aspiring Software Engineer with interests in Application Development, Mathematics, FinTech, and Data Science. I eagerly seek growth through the cultivation of my skills and learning new technologies.
                     <br><br>
@@ -64,7 +64,7 @@
 
         <section class="edu-flex tag f" id="edu">
             <h2>Education</h2>
-            <div class="edu-ucsd-flex">
+            <div class="edu-ucsd-flex f2">
                 <h3 style="min-width: 250px "><b>University of California,<br>San Diego</b><br><i style="font-size: .8em;"><br>September 2018 - July 2022</i></h3>
                 <div>
                     <p><i>Mathematics-Computer Science B.S.</i></p>
@@ -82,7 +82,7 @@
 
         <section class="exp-flex tag f" id="exp">
             <h2>Experience</h2>
-            <div class="exp-verity-flex">
+            <div class="exp-verity-flex f2">
                 <h3><b>VerityStream</b><br><i style="font-size: .8em;">June 2021 - November 2021</i></h3>
                 <div class="exp-vs-info-flex">
                     <p>At VerityStream, I was on the the Software Development team responsible for maintaining Credential Stream, which is a comprehensive provider lifecycle management solution.
@@ -106,9 +106,9 @@
             </div>
         </section>
 
-        <section class="skills-flex tag" id = "skills">
+        <section class="skills-flex tag f" id = "skills">
             <h2>Skills</h2>
-            <div class="skills-noncert-flex">
+            <div class="skills-noncert-flex f2">
                 <div class="skills-noncert-tech">
                     <h3>Technical Skills</h3>
                     <ul>
@@ -143,7 +143,7 @@
 
         <section class="flex-proj tag f" id = "proj">
             <h2>Projects</h2>
-            <div class="f1">
+            <div class="f1 f2">
                 <h3>Formula 1 Standings Predictions</h3>
                 <div>
                     <p>Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
@@ -152,7 +152,7 @@
                     <a href="https://github.com/jshinde842/Formula-1-Standings-Predictions">Link to Project</a>
                 </div>
             </div>
-            <div class="huffman">
+            <div class="huffman f2">
                 <h3>Huffman Coding</h3>
                 <div>
                     <p>Lossless file compression tool using the Huffman algorithm through an implementation of the Huffman
@@ -162,7 +162,7 @@
                     <a href="https://gitfront.io/r/user-7039462/JN8WUk319n58/Huffman-Coding/">Link to Project</a>
                 </div>
             </div>
-            <div class="traffic">
+            <div class="traffic f2">
                 <h3>Traffic Lights</h3>
                 <div>
                     <p>Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
