ucsd logo addition

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h3 style="min-width: 250px "><b>University of California,<br>San Diego</b><br><i style="font-size: .8em;"><br>September 2018 - July 2022</i></h3>
                 <div>
                     <p><i>Mathematics-Computer Science B.S.</i></p>
-                    <p>As a student at UCSD engaged in challenging curriculum in both Mathematics and Computer Science, I have had the opportunity
+                    <p class="f3">As a student at UCSD engaged in challenging curriculum in both Mathematics and Computer Science, I have had the opportunity
                         to take technical classes that are often interweaved with each other.  <br>&nbsp;<br>
                         Relevant Courses: Advanced Data Strutures, Systems Programming, Design and Analysis of Algorithms
                         , Components and Design Techniques for Digital Systems, Software Engineering, Discrete Mathematics and Graph Theory, Numerical Analysis: Linear Algebra & Approximation & Nonlinear Equations, and Statistical Methods.
@@ -84,8 +84,8 @@
             <h2>Experience</h2>
             <div class="exp-verity-flex f2">
                 <h3><b>VerityStream</b><br><i style="font-size: .8em;">June 2021 - November 2021</i></h3>
-                <div class="exp-vs-info-flex">
-                    <p>At VerityStream, I was on the the Software Development team responsible for maintaining Credential Stream, which is a comprehensive provider lifecycle management solution.
+                <div class="exp-vs-info-flex f2">
+                    <p class="f3">At VerityStream, I was on the the Software Development team responsible for maintaining Credential Stream, which is a comprehensive provider lifecycle management solution.
                     The team and I worked mainly full-stack in which I resolved query errors in the application’s database by creating and updating SQL scripts 
                     in addition to updating the application user interface to correctly provide necessary access to back end data using
                     JavaScript and HTML speeding up front-end response times by almost 100%. The features I worked on were deployed over the course of 20 bi-weekly sprints
@@ -146,7 +146,7 @@
             <div class="f1 f2">
                 <h3>Formula 1 Standings Predictions</h3>
                 <div>
-                    <p>Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
+                    <p class="f3">Analyzed Championship data sets and applied Linear Regression to Formula 1 Driver standings to predict
                     future standings using Pandas, NumPy, and MatPlotLib implemented in a Jupyter Notebook.
                     </p>
                     <a href="https://github.com/jshinde842/Formula-1-Standings-Predictions">Link to Project</a>
@@ -155,7 +155,7 @@
             <div class="huffman f2">
                 <h3>Huffman Coding</h3>
                 <div>
-                    <p>Lossless file compression tool using the Huffman algorithm through an implementation of the Huffman
+                    <p class="f3">Lossless file compression tool using the Huffman algorithm through an implementation of the Huffman
                     Coding Tree using data structures. Tool allows for lossless compression and decompression of files containing strings that are converted to/from
                     ASCII values and encoded/decoded.
                     </p>
@@ -165,7 +165,7 @@
             <div class="traffic f2">
                 <h3>Traffic Lights</h3>
                 <div>
-                    <p>Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
+                    <p class="f3">Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
                         lights. 6-Way intersection flow modeled using sequential and combinational logic.
                     </p>
                     <a href="https://github.com/jshinde842/Traffic-Lights">Link to Project</a>
