--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
         <section class="exp-flex tag f" id="exp">
             <h2>Experience</h2>
             <div class="exp-verity-flex f2">
-                <h3><b>VerityStream</b><br><i style="font-size: .8em;">June 2021 - November 2021</i></h3>
+                <h3><b>VerityStream</b><br><i style="font-size: .8em;"><br>June 2021 - November 2021</i></h3>
                 <div class="exp-vs-info-flex f2">
+                    <p><i>Software Development Intern</i></p>
                     <p class="f3">At VerityStream, I was on the the Software Development team responsible for maintaining Credential Stream, which is a comprehensive provider lifecycle management solution.
                     The team and I worked mainly full-stack in which I resolved query errors in the application’s database by creating and updating SQL scripts 
                     in addition to updating the application user interface to correctly provide necessary access to back end data using
@@ -92,17 +93,11 @@
                     according to the established Azure DevOps services and schedules we used. On top of development, I was regularly involved in 
                     project cost-time projections and priority-setting using AGILE methodology resulting in
                     smooth workflow and communication between teams. <br>&nbsp;<br>
-                    Technology Stack: 
-                    <ul >
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>SQL</li>
-                        <li>MySQL</li>
-                        <li>AngularJS</li>
-                    </ul>
-                </p>
+                    </p>
                 </div>
+                <a class="ucsd-logo" href="https://ucsd.edu" target="_blank">
+                    <img src="images/UCSD_Seal.png" alt="UCSD Logo" style="width:128px;height:128px;">
+                </a>
             </div>
         </section>
 
