experience section reformat

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         , Components and Design Techniques for Digital Systems, Software Engineering, Discrete Mathematics and Graph Theory, Numerical Analysis: Linear Algebra & Approximation & Nonlinear Equations, and Statistical Methods.
                     </p>
                 </div>
-                <a class="ucsd-logo" href="https://ucsd.edu" target="_blank">
+                <a class="institution-logo" href="https://ucsd.edu" target="_blank">
                     <img src="images/UCSD_Seal.png" alt="UCSD Logo" style="width:128px;height:128px;">
                 </a>
             </div>
@@ -95,8 +95,8 @@
                     smooth workflow and communication between teams. <br>&nbsp;<br>
                     </p>
                 </div>
-                <a class="ucsd-logo" href="https://ucsd.edu" target="_blank">
-                    <img src="images/UCSD_Seal.png" alt="UCSD Logo" style="width:128px;height:128px;">
+                <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
+                    <img src="images/veritystream_icon_color.png" alt="VerityStream Logo" style="width:128px;height:128px;">
                 </a>
             </div>
         </section>
