--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section class="exp-flex tag f" id="exp">
             <h2>Experience</h2>
             <div class="exp-verity-flex f2">
-                <h3 style="min-width: 250px;"><b>VerityStream</b><br><i style="font-size: .8em;"><br>June 2021 - November 2021</i></h3>
+                <h3 style="min-width: 250px;"><b>VerityStream</b><br><i style="font-size: .8em;"><br>San Diego, CA<br>June 2021 - November 2021</i></h3>
                 <div class="exp-vs-info-flex f2">
                     <p><i>Software Development Intern</i></p>
                     <p class="f3">At VerityStream, I was on the the Software Development team responsible for maintaining Credential Stream, which is a comprehensive provider lifecycle management solution.
