experience section reformat

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
         <section class="exp-flex tag f" id="exp">
             <h2>Experience</h2>
-            <div class="exp-verity-flex f2">
+            <div class="exp-institution-flex f2">
                 <h3 style="min-width: 250px;"><b>VerityStream</b><br><i style="font-size: .8em;"><br>San Diego, CA<br>June 2021 - November 2021</i></h3>
-                <div class="exp-vs-info-flex f2">
+                <div class="exp-institution-info-flex f2">
                     <p><i>Software Development Intern</i></p>
                     <p class="f3">At VerityStream, I was on the the Software Development team responsible for maintaining Credential Stream, which is a comprehensive provider lifecycle management solution.
                     The team and I worked mainly full-stack in which I resolved query errors in the application’s database by creating and updating SQL scripts 
@@ -93,6 +93,30 @@
                     according to the established Azure DevOps services and schedules we used. On top of development, I was regularly involved in 
                     project cost-time projections and priority-setting using AGILE methodology resulting in
                     smooth workflow and communication between teams. <br>&nbsp;<br>
+                    </p>
+                </div>
+                <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
+                    <img src="images/veritystream_icon_color.png" alt="VerityStream Logo" style="width:128px;height:128px;">
+                </a>
+            </div>
+
+            <div class="exp-institution-flex f2">
+                <h3 style="min-width: 250px;"><b>Nestle Toll House</b><br><i style="font-size: .8em;"><br>Eastvale, CA<br>October 2017 - August 2018</i></h3>
+                <div class="exp-institution-info-flex f2">
+                    <p><i>Shift Lead</i></p>
+                    <p class="f3">Shift Lead at Nestle Toll House often entailed long hours of working the store. Responsible for all opening/closing operations and training of new employees. Duties included daily interactions with POS Software, customer service, baking, serving food, store finances, and cleaning. <br>&nbsp;<br>
+                    </p>
+                </div>
+                <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
+                    <img src="images/veritystream_icon_color.png" alt="VerityStream Logo" style="width:128px;height:128px;">
+                </a>
+            </div>
+
+            <div class="exp-institution-flex f2">
+                <h3 style="min-width: 250px;"><b>Kumon North America</b><br><i style="font-size: .8em;"><br>Mira Loma, CA<br>August 2016 - August 2017</i></h3>
+                <div class="exp-institution-info-flex f2">
+                    <p><i>Mathematics Tutor</i></p>
+                    <p class="f3">Educated young students through engaging math curriculum ranging from Algebra to Calculus. Properly articulated ideas and concepts in a manner where students would be engaged and curious with mathematics through the cultivation of their problem-solving and critical thinking skills. Worked with students of all backgrounds and ages, bolstering my ability to teach, learn, and communicate ideas in an all constructive environment. <br>&nbsp;<br>
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
