experience section reformat

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     <p class="f3">Shift Lead at Nestle Toll House often entailed long hours of working the store. Responsible for all opening/closing operations and training of new employees. Duties included daily interactions with POS Software, customer service, baking, serving food, store finances, and cleaning. <br>&nbsp;<br>
                     </p>
                 </div>
-                <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
-                    <img src="images/veritystream_icon_color.png" alt="VerityStream Logo" style="width:128px;height:128px;">
+                <a class="institution-logo" href="https://www.nestlecafe.com" target="_blank">
+                    <img src="images/nestle-toll-house-logo-8B7AB7BC66-seeklogo.com.png" alt="Nestle Logo" style="width:128px;height:128px;">
                 </a>
             </div>
 
@@ -119,8 +119,8 @@
                     <p class="f3">Educated young students through engaging math curriculum ranging from Algebra to Calculus. Properly articulated ideas and concepts in a manner where students would be engaged and curious with mathematics through the cultivation of their problem-solving and critical thinking skills. Worked with students of all backgrounds and ages, bolstering my ability to teach, learn, and communicate ideas in an all constructive environment. <br>&nbsp;<br>
                     </p>
                 </div>
-                <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
-                    <img src="images/veritystream_icon_color.png" alt="VerityStream Logo" style="width:128px;height:128px;">
+                <a class="institution-logo" href="https://www.kumon.com" target="_blank">
+                    <img src="images/kumon-north-america-squarelogo.png" alt="Kumon Logo" style="width:128px;height:128px;">
                 </a>
             </div>
         </section>
