experience section reformat

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
-                    <img src="images/veritystream_icon_color.png" alt="VerityStream Logo" style="width:128px;height:128px;">
+                    <img src="images/veritystream_icon_color.png" alt="VerityStream Logo" style="width:100px;height:auto;">
                 </a>
             </div>
 
@@ -108,7 +108,7 @@
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.nestlecafe.com" target="_blank">
-                    <img src="images/nestle-toll-house-logo-8B7AB7BC66-seeklogo.com.png" alt="Nestle Logo" style="width:128px;height:128px;">
+                    <img src="images/nestle-toll-house-logo-8B7AB7BC66-seeklogo.com.png" alt="Nestle Logo" style="width:100;height:auto;">
                 </a>
             </div>
 
@@ -120,7 +120,7 @@
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.kumon.com" target="_blank">
-                    <img src="images/kumon-north-america-squarelogo.png" alt="Kumon Logo" style="width:128px;height:128px;">
+                    <img src="images/kumon-north-america-squarelogo.png" alt="Kumon Logo" style="width:100px;height:auto;">
                 </a>
             </div>
         </section>
