experience section reformat

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.nestlecafe.com" target="_blank">
-                    <img src="images/nestle-toll-house-logo-8B7AB7BC66-seeklogo.com.png" alt="Nestle Logo" style="width:100;height:auto;">
+                    <img src="images/nestle-toll-house-logo-8B7AB7BC66-seeklogo.com.png" alt="Nestle Logo" style="width:100px;height:auto;">
                 </a>
             </div>
 
