--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MGSKV7GH72"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MGSKV7GH72');
+    </script>
     <title>Jay Shinde's Site</title>
     <meta name="Jay Shinde's Site" content="Overview of Jay Shinde">
     <link rel="stylesheet" href="styles.css">
