--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </header>
 
     <main>
-        <section class="aboutme-flex f" id="about">
+        <section class="aboutme-flex" id="about">
             <img src="/images/portrait.jpg" alt="Jay Shinde, Portrait" class="aboutme-portrait">
-            <div class="aboutme-text-flex f2">
+            <div class="aboutme-text-flex f">
                 <h2>About Me</h2>
                 <p>I am an aspiring Software Engineer with interests in Application Development, Mathematics, FinTech, and Data Science. I eagerly seek growth through the cultivation of my skills and learning new technologies.
                     <br><br>
