--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Jay Shinde's Site</title>
-    <meta name="Jay Shinde's Site" content="Overview of Jay Shinde">
+    <script type="text/javascript" src="main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <title>Jay Shinde's Portfolio</title>
+    <meta name="Jay Shinde's Portfolio" content="Overview">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,20 +43,9 @@
                     Ultimately, having both a background in Mathematics as well as Computer Science, I hope to supplement my future endeavors as a Software Engineer using my skills in Mathematics as a foundation along with a pursuit for higher education.
                 </p>
                 <div class="aboutme-socials-flex">
-                    <!--
-                    <a href="https://www.linkedin.com/in/jayshinde0714/" class="weblinkLI" >
-                        <img src="/images/LI-Logo.png" alt="Jay Shinde, LinkedIn" height="30">
-                    </a>
-                    
-                    <a href="https://github.com/jshinde842" class="weblinkG">
-                        <img src="/images/GitHub_Logo.png" alt="Jay Shinde, Github" height="30">
-                    </a>
-                    -->
                     <a class="social-icon linkedin" href="https://www.linkedin.com/in/jayshinde0714/" target="_blank">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
-
-
                     <a class="social-icon github" href="https://github.com/jshinde842" target="_blank">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
@@ -92,7 +84,7 @@
                     JavaScript and HTML speeding up front-end response times by almost 100%. The features I worked on were deployed over the course of 20 bi-weekly sprints
                     according to the established Azure DevOps services and schedules we used. On top of development, I was regularly involved in 
                     project cost-time projections and priority-setting using AGILE methodology resulting in
-                    smooth workflow and communication between teams. <br>&nbsp;<br>
+                    smooth workflow and communication between teams.
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
@@ -104,7 +96,7 @@
                 <h3 style="min-width: 250px;"><b>Nestle Toll House</b><br><i style="font-size: .8em;"><br>Eastvale, CA<br>October 2017 - August 2018</i></h3>
                 <div class="exp-institution-info-flex f2">
                     <p><i>Shift Lead</i></p>
-                    <p class="f3">Shift Lead at Nestle Toll House often entailed long hours of working the store. Responsible for all opening/closing operations and training of new employees. Duties included daily interactions with POS Software, customer service, baking, serving food, store finances, and cleaning. <br>&nbsp;<br>
+                    <p class="f3">Shift Lead at Nestle Toll House often entailed long hours of working the store. Responsible for all opening/closing operations and training of new employees. Duties included daily interactions with POS Software, customer service, baking, serving food, store finances, and cleaning.
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.nestlecafe.com" target="_blank">
@@ -116,7 +108,7 @@
                 <h3 style="min-width: 250px;"><b>Kumon North America</b><br><i style="font-size: .8em;"><br>Mira Loma, CA<br>August 2016 - August 2017</i></h3>
                 <div class="exp-institution-info-flex f2">
                     <p><i>Mathematics Tutor</i></p>
-                    <p class="f3">Educated young students through engaging math curriculum ranging from Algebra to Calculus. Properly articulated ideas and concepts in a manner where students would be engaged and curious with mathematics through the cultivation of their problem-solving and critical thinking skills. Worked with students of all backgrounds and ages, bolstering my ability to teach, learn, and communicate ideas in an all constructive environment. <br>&nbsp;<br>
+                    <p class="f3">Educated young students through engaging math curriculum ranging from Algebra to Calculus. Properly articulated ideas and concepts in a manner where students would be engaged and curious with mathematics through the cultivation of their problem-solving and critical thinking skills. Worked with students of all backgrounds and ages, bolstering my ability to teach, learn, and communicate ideas in an all constructive environment.
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.kumon.com" target="_blank">
@@ -191,16 +183,10 @@
                 </div>
             </div>
         </section>
-
-        <br>
     </main>
-    <hr>
-    <footer>
-        <p style="text-align: center;">Created by Jay Shinde 2022</p>
-    </footer>
-    <script type="text/javascript" src="main.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</body>
 
+    <footer>
+
+    </footer>
+</body>
 </html>
