about me button

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
                     <a class="social-icon github" href="https://github.com/jshinde842" target="_blank">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
-                    
                 </div>
+                <div class="button" id="button-7">
+                    <div id="dub-arrow"><img src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-arrow-48-240.png?raw=true" alt="" /></div>
+                    <a href="#">More About Me</a>
+                  </div>
             </div>
         </section>
 
