--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="button" id="button-7">
                     <div id="dub-arrow"><img src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-arrow-48-240.png?raw=true" alt="" /></div>
-                    <a href="#">More About Me</a>
+                    <a href="/more-about-me.html">More About Me</a>
                   </div>
             </div>
         </section>
