about me button

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     </a>
                 </div>
                 <div class="button" id="button-7">
-                    <div id="dub-arrow"><img src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-arrow-48-240.png?raw=true" alt="" /></div>
-                    <a href="/more-about-me.html">More About Me</a>
+                    <div id="dub-arrow"><img href="#/more-about-me.html" src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-arrow-48-240.png?raw=true" alt="" /></div>
+                    <a href="#/more-about-me.html">More About Me</a>
                   </div>
             </div>
         </section>
