--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     </a>
                 </div>
                 <div class="button" id="button-7">
-                    <div id="dub-arrow"><img href="/contact.html" src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-arrow-48-240.png?raw=true" alt="" /></div>
-                    <a href="/contact.html">More About Me</a>
-                  </div>
+                    <a class = "buttontext1" href="/contact.html">More About Me</a>
+                    <a class = "buttontext2" href="/contact.html">Go!</a>
+                </div>
             </div>
         </section>
 
