--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </div>
-                <div class="button" id="button-7">
+                <div class="button" id="button-7" href="/contact.html">
                     <a class = "buttontext1" href="/contact.html">More About Me</a>
                     <a class = "buttontext2" href="/contact.html">Go!</a>
                 </div>
