--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </div>
+                <button class="btn" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
+                    <svg width="180px" height="60px" viewBox="0 0 180 60" class="border">
+                      <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
+                      <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
+                    </svg>
+                    <span>More About Me</span>
+                  </button>
             </div>
         </section>
 
