about me button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </a>
                 </div>
                 <button class="btn" onclick="window.location.href='https://jayshinde.dev/more-about-me.html';">
-                    <svg width="150px" height="40px" viewBox="0 0 150 40" class="border">
+                    <svg class="btneffect" width="150px" height="40px" viewBox="0 0 150 40" class="border">
                       <polyline points="149,1 149,39 1,39 1,1 149,1" class="bg-line" />
                       <polyline points="149,1 149,39 1,39 1,1 149,1" class="hl-line" />
                     </svg>
